[project]
name = "project-contour"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "gpx>=2025.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "pymap3d>=3.2.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "ruff>=0.14.4",
]

[tool.ruff]
line-length=190
